k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  type: NodePort
  selector:
    app: payment-service
  ports:
    - port: 8003
      targetPort: 8003
      nodePort: 30003  # External access via NodePort
      protocol: TCP
      name: http
  sessionAffinity: None
